Fix footer menu CSS on mobile

--- a/assets/css/main-rtl.css
+++ b/assets/css/main-rtl.css
@@ -2693,9 +2693,9 @@ body.suki-page-layout-boxed .suki-header-section.suki-section-full-width .menu .
 	display: flex;
 	-ms-flex-wrap: nowrap;
 	flex-wrap: nowrap;
-	-webkit-box-pack: justify;
-	-ms-flex-pack: justify;
-	justify-content: space-between;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	justify-content: center;
 	-webkit-box-align: center;
 	-ms-flex-align: center;
 	align-items: center;
